--- a/sass/_homes.scss
+++ b/sass/_homes.scss
@@ -5,6 +5,10 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
     grid-gap: 7rem;
+
+    @include respond($bp-medium) {
+        margin: 10rem 0;
+    }
 }
 
 .home {
