--- a/sass/_realtors.scss
+++ b/sass/_realtors.scss
@@ -11,6 +11,7 @@
 
     @include respond($bp-medium) {
         grid-column: 1 / -1;
+        padding: 4rem 0;
     }
 
     &__list {
@@ -22,7 +23,7 @@
 
         @include respond($bp-medium) {
             grid-template-columns: repeat(3, min-content max-content);
-
+            grid-gap: 3.5rem;
             // display: flex;
         }
 
